atlassian/fisheye/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fisheye
  labels:
    app: fisheye
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: fisheye
  template:
    metadata:
      labels:
        app: fisheye
    spec:
      containers:
        - name: fisheye
          image: atlassian/fisheye:4.8.10
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 8080
