atlassian/fisheye/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: NodePort
  selector:
    app: postgresql
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      volumes:
        - name: postgresql-vol
          persistentVolumeClaim:
            claimName: atlassian
      containers:
        - name: postgresql
          image: postgres:15.2-alpine
          imagePullPolicy: Always
          volumeMounts:
            - name: postgresql-vol
              subPath: postgresql-vol
              mountPath: /var/lib/postgresql
          ports:
            - name: tcp
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 90
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5432
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            tcpSocket:
              port: 5432
