atlassian/fisheye/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fisheye
spec:
  type: NodePort
  selector:
    app: fisheye
  ports:
    - name: http
      port: 8080
      targetPort: 8080
